--- a/Svelte/public/index.html
+++ b/Svelte/public/index.html
@@ -5,7 +5,7 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Svelte appasdasd</title>
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
