--- a/Svelte/public/index.html
+++ b/Svelte/public/index.html
@@ -6,11 +6,12 @@
 
 	<title>Svelte appasdasd</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"  type="text/css"/>
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	
-	<script defer src='/fontawesome.min.js'></script>
+	<!-- <script defer src='/fontawesome.min.js'></script> -->
 	<script defer src='/build/bundle.js'></script>
 </head>
 
