--- a/Svelte/public/index.html
+++ b/Svelte/public/index.html
@@ -10,7 +10,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<!-- <script defer src='/fontawesome.min.js'></script> -->
 	<script defer src='/build/bundle.js'></script>
 </head>
