--- a/Svelte/public/index.html
+++ b/Svelte/public/index.html
@@ -10,6 +10,7 @@
 		type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 		type="text/css" />
+	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -17,6 +18,7 @@
 </head>
 
 <body>
+	
 </body>
 
 </html>
