MORE git add -Agit add -A

--- a/Svelte/public/index.html
+++ b/Svelte/public/index.html
@@ -7,6 +7,13 @@
 
 	<title>Buddy</title>
 	<link rel="stylesheet" href="./reset.css" />
+	<!-- Material Icons -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+	<!-- Roboto -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
+	<!-- Roboto Mono -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"/>
+	<link rel="stylesheet" href="bare.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 		type="text/css" />
 
