--- a/Svelte-new/public/index.html
+++ b/Svelte-new/public/index.html
@@ -19,7 +19,7 @@
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./build/bundle.css'>
-	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script defer src='./build/bundle.js'></script>
 </head>
 
