--- a/Svelte-new/public/index.html
+++ b/Svelte-new/public/index.html
@@ -13,13 +13,14 @@
 	<!-- Roboto Mono -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"/>
 	<link rel="stylesheet" href="bare.css"/>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-		type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" type="text/css" />
 
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 	<script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/locale/pl.min.js"></script>	
 	<script defer src='./build/bundle.js'></script>
 </head>
 
